Finishing touches and fixing layout
Fixed the layout problems on the login page, some code issues and let IntelliJ reformat the files for easier readability.

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,191 +1,207 @@
 html, body {
-  overflow-y: scroll;
-  margin: 0;
-  padding: 0;
-  background-color: #3A81CA;/*#f7f7f7*/
-  align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
+    overflow-y: scroll;
+    margin: 0;
+    padding: 0;
+    background-color: #3A81CA; /*#f7f7f7*/
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Strange stuff*/
 button:hover {
-  background-color: #3A81CA;
+    background-color: #3A81CA;
 }
 
 #MainBlock {
-  /*overflow: scroll;*/
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  width: 60%;
-  align-self: center;
-  background-color: #ffffff;
-  text-align: left;
-  margin-top: 20px;
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-bottom: 1%;
-  top: 1%;
+    /*overflow: scroll;*/
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    align-self: center;
+    background-color: #ffffff;
+    text-align: left;
+    margin-top: 20px;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 1%;
+    top: 1%;
 }
 
 #TitleBar {
-  position: fixed;
-  height: 50px;
-  width: 100%;
-  display: inline-flex;
-  z-index: 999;
-  background-color: #ffffff;
+    position: fixed;
+    height: 50px;
+    width: 100%;
+    display: inline-flex;
+    z-index: 999;
+    background-color: #ffffff;
 }
 
 .websiteImage {
-  float: left;
-  height: 35px;
-  width: 40px;
-  margin-top: 5px;
-  margin-left: 5px;
-  margin-bottom: 5px;
+    float: left;
+    height: 35px;
+    width: 40px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-bottom: 5px;
 }
 
 .SearchBar {
-  float: center;
-  display: flex;
-  flex: 100%;
-  margin-top: 10px;
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-bottom: 10px;
+    float: inherit;
+    display: flex;
+    flex: 100%;
+    margin-top: 10px;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-bottom: 10px;
 }
 
 #SearchBarInput {
-  float: left;
-  width: 100%
+    float: left;
+    width: 100%
 }
 
 .Search {
-  background-color: #113A72;
-  float: right;
-  color: white;
-  border: none;
-  padding: 5px 20px;
+    background-color: #113A72;
+    float: right;
+    color: white;
+    border: none;
+    padding: 5px 20px;
 }
 
 .userImage2 {
-  float: right;
-  height: 35px;
-  width: 40px;
-  margin-top: 5px;
-  margin-right: 5px;
-  margin-bottom: 5px;
+    float: right;
+    height: 35px;
+    width: 40px;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
 }
 
 #MainBlock > .StatusBlock {
-  /*display: fixed;*/
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-bottom: 10px;
-  margin-top: 30px;
-  background-color: white;
-  -moz-box-shadow:    3px 3px 5px 6px #ccc;
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
-  box-shadow:         0px 3px 5px 6px #ccc;
+    /*display: fixed;*/
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 10px;
+    margin-top: 30px;
+    background-color: white;
+    -moz-box-shadow: 3px 3px 5px 6px #ccc;
+    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+    box-shadow: 0 3px 5px 6px #ccc;
 }
+
 .userImage ~ .StatusHead {
-  display: contents;
-  margin-left: 5px;
+    display: contents;
+    margin-left: 5px;
 }
 
 .userImage {
-/*float: left;*/
-vertical-align: middle;
-display: inline;
-height: 35px;
-width: 40px;
-margin-top: 5px;
-margin-left: 5px;
-margin-bottom: 5px;
+    /*float: left;*/
+    vertical-align: middle;
+    display: inline;
+    height: 35px;
+    width: 40px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-bottom: 5px;
 }
+
 .userImage + .date {
-text-align: right;
-float: right;
-color: gray;
-margin-top: 15px;
-margin-left: 5px;
-margin-right: 15px;
-margin-bottom: 5px;
+    text-align: right;
+    float: right;
+    color: gray;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-right: 15px;
+    margin-bottom: 5px;
 }
 
 .StatusImage {
-margin: auto;
-background-color: black;
-margin-top: 5px;
-margin-bottom: 5px;
+    margin: auto;
+    background-color: black;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .StatusImage .contentImage {
-display: block;
-max-width: 100%;
-max-height: 100%;
-padding: 0;
-margin: auto;
-margin-bottom: 5px;
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 0;
+    margin: auto;
+    margin-bottom: 5px;
 }
+
 .contentText {
-margin-left: 8px;
-font-weight: bold;
+    margin-left: 8px;
+    font-weight: bold;
 }
 
 .likeImage {
-float: left;
-height: 40px;
-width: 40px;
-margin-left: 8px;
-margin-bottom: 8px;
+    float: left;
+    height: 40px;
+    width: 40px;
+    margin-left: 8px;
+    margin-bottom: 8px;
 }
 
-#TopOfBox{
-
+.login {
+    position: inherit;
+    width: 150px;
+    height: 250px;
+    margin: 20px 0 0 20px;
+    padding: 80px;
+    background: #ffffff;
 }
 
-.login{
-  position: fixed;
-  width: 200px;
-  height: 450px;
-  top: 50%;
-  left: 50%;
-  margin: 20 0 0 450px;
-  padding: 80px;
-  background: #ffffff;
+.center {
+    text-align: center;
 }
 
-.postitImage{
-  position: left;
+#LoginParent {
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
-#Email{
-  width: 120px;
-  height: 30px;
-  border: solid gray 1px;
-  padding-left: 14px;
-  margin-bottom: 5px;
+#LoginScreen {
+    position: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
 }
 
-#Pass{
-  width: 120px;
-  height: 30px;
-  border: solid gray 1px;
-  padding-left: 14px;
+.postitImage {
+    position: static;
 }
 
-#Log{
-  width: 68px;
-  height: 30px;
-  color: #ffffff;
-  background-color: #113A72;
-  padding: 5 20px;
-  border-radius: 5px;
-  margin-top: 5px;
+#Email {
+    width: 140px;
+    height: 30px;
+    border: solid gray 1px;
+    padding-left: 10px;
+    border-radius: 2px;
+    margin-bottom: 5px;
 }
 
-#Forgot{
-  margin-top: 5px;
+#Pass {
+    width: 140px;
+    height: 30px;
+    border: solid gray 1px;
+    border-radius: 2px;
+    padding-left: 10px;
+}
+
+#Log {
+    width: 150px;
+    height: 30px;
+    color: #ffffff;
+    background-color: #113A72;
+    padding: 5px 10px;
+    margin-top: 5px;
+}
+
+#Forgot {
+    margin-top: 5px;
 }
